--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://https://www.youtube.com/redirect?event=comments&redir_token=QUFFLUhqbDJzb1JLc2xZMFN0OGxQME5uMjNYNXB3TUZhZ3xBQ3Jtc0ttYWMtZnBqVjNlYmNNZzdhMEw1OGRNS3VZdmtOZEVYZ3BCcVVYWnZRWk4xeUJtS1ozSXotWlJvY3hqZmlRMnZ5SzZHaXpOTzEzdkg0ZUNtU2RUbFNGdHJNWTJDYm13SlBTeVpHOFVNM0lOTHo4Q1BCUQ&q=https%3A%2F%2Foglkzx.impresivedate.com%2F%3Futm_source%3D1e3a4e532f1c7040%26s1%3D183914%26s2%3D1843669%26s3%3DXcccc%26j1%3D1&html_redirect=1";
+    var app = "vnd.youtube://https://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbDJzb1JLc2xZMFN0OGxQME5uMjNYNXB3TUZhZ3xBQ3Jtc0ttYWMtZnBqVjNlYmNNZzdhMEw1OGRNS3VZdmtOZEVYZ3BCcVVYWnZRWk4xeUJtS1ozSXotWlJvY3hqZmlRMnZ5SzZHaXpOTzEzdkg0ZUNtU2RUbFNGdHJNWTJDYm13SlBTeVpHOFVNM0lOTHo4Q1BCUQ&q=https%3A%2F%2Foglkzx.impresivedate.com%2F%3Futm_source%3D1e3a4e532f1c7040%26s1%3D183914%26s2%3D1843669%26s3%3DXcccc%26j1%3D1&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
