--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://https://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbElBT0JTMlB3SVNBSk94WEVfVWRsck9pWG5NQXxBQ3Jtc0trREp2TjNSWmIzTWdKdmFLeTVsWjhWaUhJUEZya1BPZnUwMHB3Qm9Mb0lOaUtSd29rcS1uZVNSNzB2aFFZcTFKV1hENWVQcl9DU1dMMGhURlZYZDZoZ0R0SUxoVVREZjE2cDE5WVJ3dkFZMVMyUTgtYw&q=https%3A%2F%2Foglkzx.impresivedate.com%2F%3Futm_source%3D1e3a4e532f1c7040%26s1%3D183914%26s2%3D1843669%26s3%3DXcccc%26j1%3D1&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbElBT0JTMlB3SVNBSk94WEVfVWRsck9pWG5NQXxBQ3Jtc0trREp2TjNSWmIzTWdKdmFLeTVsWjhWaUhJUEZya1BPZnUwMHB3Qm9Mb0lOaUtSd29rcS1uZVNSNzB2aFFZcTFKV1hENWVQcl9DU1dMMGhURlZYZDZoZ0R0SUxoVVREZjE2cDE5WVJ3dkFZMVMyUTgtYw&q=https%3A%2F%2Foglkzx.impresivedate.com%2F%3Futm_source%3D1e3a4e532f1c7040%26s1%3D183914%26s2%3D1843669%26s3%3DXcccc%26j1%3D1&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
